# Slack_Week1

./: README.md  pyproject.toml  requirements.txt
app/: main.py  model.py
docs/: notes.md
scripts/: run.sh
tests/: test_main.py
