[project]
name = "slack-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Pratham Adhikari",email = "pratham.adhikari@codavatar.tech"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
